infrastructure-modules/vpc/2-igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name = "weijie-${var.env}-igw"
  }

}
